src/ui/sass/trumbowyg.scss
/* ... */
.trumbowyg-dropdown {
    width: 200px;
    border: 1px solid $light-color;
    padding: 5px 0;
    border-top: none;
    background: #FFF;
    margin-left: -1px;
    box-shadow: rgba(0, 0, 0, .1) 0 2px 3px;

    button {
        display: block;
        width: 100%;
        height: 35px;
        line-height: 35px;
        text-decoration: none;
        background: #FFF;
        padding: 0 10px;
        color: #333 !important;
        border: none;
        cursor: pointer;
        text-align: left;
        font-size: 15px;
        transition: all $transition-duration;

        &:hover,
        &:focus {
            background: $light-color;
        }

        svg {
            float: left;
            margin-right: 14px;
        }
    }
}

/* Modal box */
.trumbowyg-modal {
    position: absolute;
    top: 0;
    left: 50%;
    margin-left: -260px;
    width: 520px;
    height: 350px;
    z-index: 11;
    overflow: hidden;
    backface-visibility: hidden;
}

.trumbowyg-modal-box {
    position: absolute;
    top: 0;
    left: 50%;
    margin-left: -250px;
    width: 500px;
    padding-bottom: 45px;
    z-index: 1;
    background-color: #FFF;
    text-align: center;
    font-size: 14px;
    box-shadow: rgba(0, 0, 0, .2) 0 2px 3px;
    backface-visibility: hidden;

    .trumbowyg-modal-title {
        font-size: 24px;
        font-weight: bold;
        margin: 0 0 20px;
        padding: 15px 0 13px;
        display: block;
        border-bottom: 1px solid #EEE;
        color: #333;
        background: lighten($light-color, 5%);
    }

    .trumbowyg-progress {
        width: 100%;
        background: #F00;
        height: 3px;
        position: absolute;
        top: 58px;

        .trumbowyg-progress-bar {
            background: #2BC06A;
            height: 100%;
            transition: width $transition-duration linear;
        }
    }

    label {
        display: block;
        position: relative;
        margin: 15px 12px;
        height: 27px;
        line-height: 27px;
        overflow: hidden;

        .trumbowyg-input-infos {
            display: block;
            text-align: left;
            height: 25px;
            line-height: 25px;
            transition: all 150ms;

            span {
                display: block;
                color: darken($light-color, 45%);
                background-color: lighten($light-color, 5%);
                border: 1px solid #DEDEDE;
                padding: 0 7px;
                width: 137px;
            }
            span.trumbowyg-msg-error {
                color: #e74c3c;
            }
        }

        &.trumbowyg-input-error {
            input,
            textarea {
                border: 1px solid #e74c3c;
            }

            .trumbowyg-input-infos {
                margin-top: -27px;
            }
        }

        input {
            position: absolute;
            top: 0;
            right: 0;
            height: 27px;
            line-height: 27px;
            border: 1px solid #DEDEDE;
            background: transparent;
            font-size: 14px;
            width: 340px;
            padding: 0 7px;
            transition: all $transition-duration;

            &:hover,
            &:focus {
                outline: none;
                border: 1px solid #95a5a6;
            }
            &:focus {
                background: rgba(230, 230, 255, .1);
            }
        }
    }

    .error {
        margin-top: 25px;
        display: block;
        color: red;
    }

    .trumbowyg-modal-button {
        position: absolute;
        bottom: 10px;
        right: 0;
        text-decoration: none;
        color: #FFF;
        display: block;
        width: 100px;
        height: 35px;
        line-height: 33px;
        margin: 0 10px;
        background-color: #333;
        border: none;
        cursor: pointer;
        font-family: "Trebuchet MS", Helvetica, Verdana, sans-serif;
        font-size: 16px;
        transition: all $transition-duration;

        &.trumbowyg-modal-submit {
            right: 110px;
            background: darken($modal-submit-color, 3%);

            &:hover,
            &:focus {
                background: lighten($modal-submit-color, 5%);
                outline: none;
            }
            &:active {
                background: darken($modal-submit-color, 10%);
            }
        }

        &.trumbowyg-modal-reset {
            color: #555;
            background: darken($modal-reset-color, 3%);

            &:hover,
            &:focus {
                background: lighten($modal-reset-color, 5%);
                outline: none;
            }
            &:active {
                background: darken($modal-reset-color, 10%);
            }
        }
    }
}

.trumbowyg-overlay {
    position: absolute;
    background-color: rgba(255, 255, 255, 0.5);
    width: 100%;
    left: 0;
    display: none;
    z-index: 10;
}

/**
 * Fullscreen
 */
body.trumbowyg-body-fullscreen {
    overflow: hidden;
}

.trumbowyg-fullscreen {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 0;
    z-index: 99999;

    &.trumbowyg-box,
    .trumbowyg-editor {
        border: none;
    }
    .trumbowyg-editor,
    .trumbowyg-textarea {
        height: calc(100% - 37px) !important;
        overflow: auto;
    }
    .trumbowyg-overlay {
        height: 100% !important;
    }
    .trumbowyg-button-group .trumbowyg-fullscreen-button svg {
        color: $dark-color;
        fill: transparent;
    }
}
/* ... */

